# Logger

./: .gitignore  ALogger.cpp  ALogger.hpp  CMakeLists.txt  DefaultLogFormatter.cpp  DefaultLogFormatter.hpp  ILogFormatter.hpp  LICENSE  Logger.h  README.md  SimpleLogger.cpp  SimpleLogger.hpp  ThreadedLogger.cpp  ThreadedLogger.hpp
test/: CMakeLists.txt  Main.cpp
